    Backwards compatibility with previous releases of Predis is ensured.

  * New signature for Predis\Client::pipeline() which is now able to accept 
    an array of options for the underlying instance of Predis\CommandPipeline. 
    Backwards compatibility with previous releases of Predis is ensured. 
    The method Predis\Client::pipelineSafe() is to be considered deprecated.

v0.6.0 (2010-05-24)
  * Switched to the new multi-bulk request protocol for all of the commands 
    in the Redis 1.2 and Redis 2.0 profiles. Inline and bulk requests are now 
    deprecated as they will be removed in future releases of Redis.

  * The default server profile is "2.0" (targeting Redis 2.0.x). If you are 
    using older versions of Redis, it is highly recommended that you specify 
    which server profile the client should use (e.g. "1.2" when connecting 
    to instances of Redis 1.2.x).

  * Support for Redis 1.0 is now optional and it is provided by requiring 
    'Predis_Compatibility.php' before creating an instance of Predis\Client.

  * New commands added to the Redis 2.0 profile since Predis 0.5.1:
      - Strings: SETEX, APPEND, SUBSTR
      - ZSets  : ZCOUNT, ZRANK, ZUNIONSTORE, ZINTERSTORE, ZREMBYRANK, ZREVRANK
      - Hashes : HSET, HSETNX, HMSET, HINCRBY, HGET, HMGET, HDEL, HEXISTS, 
                 HLEN, HKEYS, HVALS, HGETALL
      - PubSub : PUBLISH, SUBSCRIBE, UNSUBSCRIBE
      - Misc.  : DISCARD, CONFIG

  * Introduced client-level options with the new Predis\ClientOptions class. 
    Options can be passed to Predis\Client::__construct in its second argument 
    as an array or an instance of Predis\ClientOptions. For brevity's sake and 
    compatibility with older versions, the constructor of Predis\Client still 
    accepts an instance of Predis\RedisServerProfile in its second argument.
    The currently supported client options are:
      - profile [default: "2.0" as of Predis 0.6.0]